; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/mangling/cxx/extr_cp-demangle.c_d_args_length.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/mangling/cxx/extr_cp-demangle.c_d_args_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d_print_info = type { i32 }
%struct.demangle_component = type { i64 }

@DEMANGLE_COMPONENT_TEMPLATE_ARGLIST = common dso_local global i64 0, align 8
@DEMANGLE_COMPONENT_PACK_EXPANSION = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.d_print_info*, %struct.demangle_component*)* @d_args_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @d_args_length(%struct.d_print_info* %0, %struct.demangle_component* %1) #0 {
  %3 = alloca %struct.d_print_info*, align 8
  %4 = alloca %struct.demangle_component*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.demangle_component*, align 8
  %7 = alloca %struct.demangle_component*, align 8
  store %struct.d_print_info* %0, %struct.d_print_info** %3, align 8
  store %struct.demangle_component* %1, %struct.demangle_component** %4, align 8
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %46, %2
  %9 = load %struct.demangle_component*, %struct.demangle_component** %4, align 8
  %10 = icmp ne %struct.demangle_component* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %8
  %12 = load %struct.demangle_component*, %struct.demangle_component** %4, align 8
  %13 = getelementptr inbounds %struct.demangle_component, %struct.demangle_component* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @DEMANGLE_COMPONENT_TEMPLATE_ARGLIST, align 8
  %16 = icmp eq i64 %14, %15
  br label %17

17:                                               ; preds = %11, %8
  %18 = phi i1 [ false, %8 ], [ %16, %11 ]
  br i1 %18, label %19, label %49

19:                                               ; preds = %17
  %20 = load %struct.demangle_component*, %struct.demangle_component** %4, align 8
  %21 = call %struct.demangle_component* @d_left(%struct.demangle_component* %20)
  store %struct.demangle_component* %21, %struct.demangle_component** %6, align 8
  %22 = load %struct.demangle_component*, %struct.demangle_component** %6, align 8
  %23 = icmp eq %struct.demangle_component* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %19
  br label %49

25:                                               ; preds = %19
  %26 = load %struct.demangle_component*, %struct.demangle_component** %6, align 8
  %27 = getelementptr inbounds %struct.demangle_component, %struct.demangle_component* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @DEMANGLE_COMPONENT_PACK_EXPANSION, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %42

31:                                               ; preds = %25
  %32 = load %struct.d_print_info*, %struct.d_print_info** %3, align 8
  %33 = load %struct.demangle_component*, %struct.demangle_component** %6, align 8
  %34 = call %struct.demangle_component* @d_left(%struct.demangle_component* %33)
  %35 = call %struct.demangle_component* @d_find_pack(%struct.d_print_info* %32, %struct.demangle_component* %34)
  store %struct.demangle_component* %35, %struct.demangle_component** %7, align 8
  %36 = load %struct.demangle_component*, %struct.demangle_component** %7, align 8
  %37 = call i64 @d_pack_length(%struct.demangle_component* %36)
  %38 = load i32, i32* %5, align 4
  %39 = sext i32 %38 to i64
  %40 = add nsw i64 %39, %37
  %41 = trunc i64 %40 to i32
  store i32 %41, i32* %5, align 4
  br label %45

42:                                               ; preds = %25
  %43 = load i32, i32* %5, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %5, align 4
  br label %45

45:                                               ; preds = %42, %31
  br label %46

46:                                               ; preds = %45
  %47 = load %struct.demangle_component*, %struct.demangle_component** %4, align 8
  %48 = call %struct.demangle_component* @d_right(%struct.demangle_component* %47)
  store %struct.demangle_component* %48, %struct.demangle_component** %4, align 8
  br label %8

49:                                               ; preds = %24, %17
  %50 = load i32, i32* %5, align 4
  ret i32 %50
}

declare dso_local %struct.demangle_component* @d_left(%struct.demangle_component*) #1

declare dso_local %struct.demangle_component* @d_find_pack(%struct.d_print_info*, %struct.demangle_component*) #1

declare dso_local i64 @d_pack_length(%struct.demangle_component*) #1

declare dso_local %struct.demangle_component* @d_right(%struct.demangle_component*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
